# rust-crypto-trader

./: .gitignore  Cargo.toml  README.md
src/: api.rs  archive.rs  bot.rs  cli.rs  config.rs  lib.rs  main.rs  market.rs  num.rs  public.rs  trace.rs
src/api/: market.rs  orderbook.rs
src/api/market/: private.rs  public.rs
src/bot/: spread.rs
src/market/: kraken.rs  num.rs  number.rs  orderbook.rs  private.rs  public.rs
src/market/api/: private.rs  public.rs
src/market/public/: orderbook.rs
