[package]
name = "rust-crypto-trader"
version = "0.1.0"
authors = ["Tobin C. Harding <tobin@coblox.tech>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
atty = "0.2"
log = { version = "0.4", features = ["serde"] }
reqwest = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spectral = "0.6"
tokio = { version = "0.2", features = ["rt-threaded", "time", "macros", "sync"] }
tracing = { version = "0.1", features = ["attributes"] }
tracing-log = "0.1"
tracing-subscriber = "0.2"
url = "2.1"
