[package]
name = "crypto-trader"
version = "0.1.0"
authors = ["Tobin C. Harding <tobin@coblox.tech>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
atty = "0.2"
chrono = "0.4"
directories = "3.0"
float-cmp = "0.8"
hex = "0.4"
hmac = "0.8"
log = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.10", features = ["json"] }
rust_decimal = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9"
spectral = "0.6"
thiserror = "1"
tokio = { version = "0.2", features = ["rt-threaded", "time", "macros", "sync"] }
toml = "0.5"
tracing = { version = "0.1", features = ["attributes"] }
tracing-log = "0.1"
tracing-subscriber = "0.2"
url = "2.1"

[dev-dependencies]
proptest = "0.10"
